--- a/alice.htm
+++ b/alice.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>캐릭터 정보 - GCB.gg</title>
-    <link rel="stylesheet" href="%EC%BA%90%EB%A6%AD%ED%84%B0%20%EC%A0%95%EB%B3%B4%20-%20GCB.gg_files/main.css">
+    <link rel="stylesheet" href="alice/main.css">
     <link rel="icon" href="https://gcbgg.netlify.app/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
     <div class="container character-detail-container">
         <div class="character-header">
-            <img id="character-portrait" class="character-portrait-lg" src="%EC%BA%90%EB%A6%AD%ED%84%B0%20%EC%A0%95%EB%B3%B4%20-%20GCB.gg_files/1.png" alt="캐릭터 초상화">
+            <img id="character-portrait" class="character-portrait-lg" src="alice/1.png" alt="캐릭터 초상화">
             <h1 id="character-name">앨리스</h1>
         </div>
 
@@ -114,6 +114,7 @@
     </div>
 
     <script src="%EC%BA%90%EB%A6%AD%ED%84%B0%20%EC%A0%95%EB%B3%B4%20-%20GCB.gg_files/character_detail.js"></script>
+
 
 
 </body></html>
