--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <title>시벌.가즈아.메인.한국</title>
+<link rel="alternate" type="application/json+oembed" title="시벌.가즈아.메인.한국">
+<link rel="alternate" type="application/xml+oembed" title="시벌.가즈아.메인.한국">
 <a href="https://marisagg.netlify.app/gcbgg.html" style="font-size: 24px;">gcbgg (누가 ai로만든거)</a>
 <br><br>
 
 <a href="https://marisagg.netlify.app/alice.html" style="font-size: 24px;">내가만든창캐: 앨리스</a>
+
